<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.projects.diwanshusoni.studentprofiletracker.Activities.LoginActivity">

    <ScrollView
        android:layout_marginBottom="32dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/et_email_loginactivity_id"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:hint="@string/email_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/et_password_loginactivity_id"
                    android:maxLines="1"
                    android:layout_below="@id/et_email_loginactivity_id"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn_login_loginactivity_id"
                    android:text="@string/btn_login_text"
                    android:layout_below="@id/et_password_loginactivity_id"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn_register_loginactivity_id"
                    android:text="@string/btn_register_text"
                    android:layout_below="@id/et_password_loginactivity_id"
                    android:layout_alignParentRight="true"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
