<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.projects.diwanshusoni.studentprofiletracker.Activities.AntiRaggingEmergencyInfo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:padding="@dimen/def_padding"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_alert_antiragging_id"
                    android:text="@string/tv_antiragging_note"
                    android:layout_alignParentTop="true"
                    android:textSize="@dimen/def_text_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/et_emer1_antiragging_id"
                    android:hint="@string/antiragging_e1"
                    android:layout_margin="@dimen/fab_margin"
                    android:layout_below="@id/tv_alert_antiragging_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/et_emer2_antiragging_id"
                    android:hint="@string/antiragging_e2"
                    android:layout_margin="@dimen/fab_margin"
                    android:layout_below="@id/et_emer1_antiragging_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn_submit_antiragging_id"
                    android:layout_below="@id/et_emer2_antiragging_id"
                    android:layout_centerHorizontal="true"
                    android:text="@string/btn_antiragging_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn_sos_antiragging_id"
                    android:text="SOS\nLong Press To Call For HELP"
                    android:textAllCaps="false"
                    android:layout_marginTop="@dimen/def_padding"
                    android:layout_below="@id/btn_submit_antiragging_id"
                    android:layout_centerHorizontal="true"
                    android:layout_width="200dp"
                    android:layout_height="200dp" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
