<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.projects.diwanshusoni.studentprofiletracker.Activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:padding="@dimen/def_padding"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circle_iv_profilepic_registeractivity_id"
                    android:src="@drawable/ic_person_black_24dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_width="150dp"
                    android:layout_height="150dp" />

                <android.support.design.widget.TextInputLayout
                    android:visibility="gone"
                    android:id="@+id/textlay_username_registeractivity_id"
                    android:layout_below="@id/circle_iv_profilepic_registeractivity_id"
                    android:padding="@dimen/def_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_username_registeractivity_id"
                        android:hint="@string/username_hint"
                        android:textColorHint="@color/def_hint_text_color"
                        android:textColor="@color/def_text_color"
                        android:textSize="@dimen/def_text_size"
                        android:inputType="textAutoComplete"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textlay_email_registeractivity_id"
                    android:layout_below="@id/textlay_username_registeractivity_id"
                    android:padding="@dimen/def_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_email_registeractivity_id"
                        android:hint="@string/email_hint"
                        android:textColorHint="@color/def_hint_text_color"
                        android:textColor="@color/def_text_color"
                        android:textSize="@dimen/def_text_size"
                        android:inputType="textWebEmailAddress"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textlay_mobilenumber_registeractivity_id"
                    android:layout_below="@id/textlay_email_registeractivity_id"
                    android:padding="@dimen/def_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_mobilenumber_registeractivity_id"
                        android:hint="@string/mobilenumber_hint"
                        android:textColorHint="@color/def_hint_text_color"
                        android:textColor="@color/def_text_color"
                        android:textSize="@dimen/def_text_size"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textlay_collegeid_registeractivity_id"
                    android:layout_below="@id/textlay_mobilenumber_registeractivity_id"
                    android:padding="@dimen/def_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:focusable="false"
                        android:text="JECRC FOUNDATION"
                        android:id="@+id/et_collegeid_registeractivity_id"
                        android:hint="@string/college_hint"
                        android:textColorHint="@color/def_hint_text_color"
                        android:textColor="@color/def_text_color"
                        android:textSize="@dimen/def_text_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_register_registeractivity_id"
                    android:layout_below="@id/textlay_collegeid_registeractivity_id"
                    android:layout_centerHorizontal="true"
                    android:text="@string/btn_register_text"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
